[package]
name = "unificial-api"
version = "0.2.0"
edition = "2024"
authors = ["Danielosw"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/danielosw/unificial-api"
description = "A trait-based fanfiction API framework with pluggable site downloaders"
readme = "README.md"
keywords = ["fanfiction", "scraper", "extraction", "ao3", "downloader"]
categories = ["parser-implementations", "web-programming"]

[dependencies]
ficdata = { git = "https://github.com/danielosw/ficdata.git" }
scraper = "0.*"
regex = "1.*"
thiserror = "2.0.18"
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
reqwest = { version = "0.*", features = ["cookies", "blocking"] }
rayon = "1.11.0"
pretty_env_logger = "0.5.*"
log = "0.4"


[lints.rust]
non_snake_case = { level = "allow" }
